syntax = "proto3";

package wres.statistics.generated;

import "metric_name.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "BoxplotMetricProto";
option java_multiple_files = true;

message BoxplotMetric
{
    // A message that encapsulates a box plot metric.

    MetricName name = 1;    
    // Metric name.
    
    repeated double quantiles = 2;
    // The quantiles at which the whiskers are defined.
    
    enum LinkedValueType
    {
        //The type of value linked to each box.
        
        UNKNOWN = 0;
        OBSERVED_VALUE = 1;
        FORECAST_VALUE = 2;
        ENSEMBLE_MEAN = 3;
    }

    LinkedValueType linked_value_type = 3;
    /*The type of value linked to each box. For example,
    when plotting boxes by observed value, this is 
    LinkedValueType.OBSERVED_VALUE.*/

    string units = 4;
    // Units of the quantiles.
    
    double optimum = 5; 
    // Optimum value.
    
    double minimum = 6;
    // The lower bound of the quantiles.

    double maximum = 7;
    // The upper bound of the quantiles.
}